--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,43 +3,44 @@ services:
     image: mysql:5.7
     container_name: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: devops
-      MYSQL_USER: admin
       MYSQL_PASSWORD: admin
+      MYSQL_USER: admin
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: tws_db
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
+      - ./mysql_data_new:/var/lib/mysql
     networks:
       - twotier
+    ports:
+      - "3306:3306"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      test: ["CMD","mysqladmin","ping","-h","localhost","-uroot","-padmin"]
       interval: 10s
-      timeout: 5s
       retries: 5
       start_period: 60s
+      timeout: 5s
 
-  flask-app:
-    image: trainwithshubham/two-tier-flask-app:latest
-    container_name: flask-app
-    ports:
-      - "5000:5000"
+      
+  flaskapp:
+    build:
+      context: .
+    container_name: flaskapp
     environment:
-      MYSQL_HOST: mysql
+      MYSQL_PASSWORD: admin
       MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_DB: devops
-    depends_on:
-      - mysql
+      MYSQL_DB: tws_db
+      MYSQL_HOST: mysql
+
     networks:
       - twotier
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+
+    ports:
+      - "5000:5000"
+
+    depends_on:
+      - mysql
+      volumes:
+  mysql_data_new:
 
 networks:
   twotier:
