--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
+
+version: "3.8"
+
 services:
   mysql:
+    user: "${UID}:${GID}" 
     image: mysql:5.7
     container_name: mysql
     environment:
