--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
+version: "3.8"
+
 services:
   mysql:
-    user: "${UID:-1000}:${GID:-1000}"
+    user: "${UID}:${GID}" 
     image: mysql:5.7
     container_name: mysql
     environment:
@@ -31,8 +33,7 @@ services:
       MYSQL_PASSWORD: root
       MYSQL_DB: devops
     depends_on:
-      mysql:
-        condition: service_healthy
+      - mysql
     networks:
       - twotier
     restart: always
